--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Coin Tracker - Public Dashbaord</title>
+  <title>Coin Tracker - User Dashbaord</title>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -19,11 +19,11 @@
 
     <div class="jumbotron">
       <h1>
-        Public Dashboard
+        User Dashboard
       </h1>
     </div>
 
-    <a href="user-dashboard.html"> Go to the user dashbaord</a>
+    <a href="index.html"> Go to the public dashbaord</a>
 
   </div>
 
