created scroll bar

--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
       </h1>
     </div>
 
-    <a href="user-dashboard.html"> Go to the user dashbaord</a>
+
+
+
+    <marquee behavior="scroll" direction="right" 
+    onmouseover="this.stop();" 
+    onmouseout="this.start();">
+    <div id="ticker"></div>
+      
+</marquee>
+    
 
   </div>
 
@@ -35,6 +44,7 @@
 
   <!-- Local JavaScript -->
   <script src="assets/scripts/app.js"></script>
+  
 
   <!-- Individual Scripts -->
   <script src="assets/scripts/app-chris.js"></script>
