--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
             <h2 class="panel-title">News Feed</h2>
           </div>
           <div class="panel-body">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae iusto consequuntur recusandae ipsam reiciendis quia ad nemo,
-            repellendus similique fugit. Omnis aut officia laboriosam cumque nobis numquam voluptatem, quia expedita?
+            <div id="newsfeed"></div>
           </div>
         </div>
       </div>
