added css for tiles and divs to append data to for coins

--- a/index.html
+++ b/index.html
@@ -59,12 +59,9 @@
             <h2 class="panel-title">Crypto Rankings</h2>
           </div>
           <div class="panel-body">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate laudantium aliquid quibusdam eius magnam, distinctio molestias
-            excepturi maiores repellat id fugit quidem porro delectus debitis culpa necessitatibus harum aperiam totam cum
-            aut. Doloribus aliquam cupiditate earum ipsam ab eaque nam quis in id exercitationem quos suscipit nihil, dignissimos
-            dolore commodi eos distinctio eius et error, laudantium minus deserunt officiis. Incidunt asperiores nostrum
-            error corrupti consequuntur illum nesciunt libero, officiis non fugit necessitatibus unde voluptatibus quibusdam
-            nobis id sit, et aut veniam.
+              <div id="public-tile">
+                  <p>PUBLIC COIN IMG WILL GO HERE.</p>
+                  </div>
           </div>
         </div>
       </div>
