--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -43,11 +43,18 @@
 
     <div class="row">
       <div class="col-md-12">
-        <div class="jumbotron">
-          <h2>SAVED CURRENCIES</h2>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h2 class="panel-title">SAVED CURRENCIES</h2>
+          </div>
+          <div class="panel-body">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis expedita obcaecati cum tenetur perspiciatis sit, voluptate,
+            nemo optio ipsam dolorem veritatis ut? Esse vel ducimus molestias eum, unde illum iure?
+          </div>
         </div>
       </div>
     </div>
+
 
     <div class="row">
       <div class="col-md-8">
@@ -56,12 +63,9 @@
             <h2 class="panel-title">Crypto Rankings</h2>
           </div>
           <div class="panel-body">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate laudantium aliquid quibusdam eius magnam, distinctio molestias
-            excepturi maiores repellat id fugit quidem porro delectus debitis culpa necessitatibus harum aperiam totam cum
-            aut. Doloribus aliquam cupiditate earum ipsam ab eaque nam quis in id exercitationem quos suscipit nihil, dignissimos
-            dolore commodi eos distinctio eius et error, laudantium minus deserunt officiis. Incidunt asperiores nostrum
-            error corrupti consequuntur illum nesciunt libero, officiis non fugit necessitatibus unde voluptatibus quibusdam
-            nobis id sit, et aut veniam.
+              <div id="user-tile">
+                  <p>SAVED COIN IMG WILL APPEND HERE</p>
+                  </div>
           </div>
         </div>
       </div>
@@ -77,7 +81,7 @@
       </div>
     </div>
 
-  <!-- CLOSE CONTAINER -->
+    <!-- CLOSE CONTAINER -->
   </div>
 
   <!-- jQuery -->
