created divs to place our imgs for each of the top 50 coins

--- a/index.html
+++ b/index.html
@@ -54,14 +54,12 @@
 
     <div class="row">
       <div class="col-md-8">
-        <div class="panel panel-default">
+        <div class="panel panel-default" >
           <div class="panel-heading">
             <h2 class="panel-title">Crypto Rankings</h2>
           </div>
-          <div class="panel-body">
-              <div id="public-tile">
-                  <p>PUBLIC COIN IMG WILL GO HERE.</p>
-                  </div>
+          <div class="panel-body" id="top50">
+            
           </div>
         </div>
       </div>
@@ -77,7 +75,7 @@
       </div>
     </div>
 
-  <!-- CLOSE CONTAINER -->
+    <!-- CLOSE CONTAINER -->
   </div>
 
   <!-- SIGNUP MODAL -->
