--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -58,14 +58,12 @@
 
     <div class="row">
       <div class="col-md-8">
-        <div class="panel panel-default">
+        <div class="panel panel-default" >
           <div class="panel-heading">
             <h2 class="panel-title">Crypto Rankings</h2>
           </div>
-          <div class="panel-body">
-              <div id="user-tile">
-                  <p>SAVED COIN IMG WILL APPEND HERE</p>
-                  </div>
+          <div class="panel-body" id="top50">
+            
           </div>
         </div>
       </div>
