updates to newsfeed script, ui

--- a/index.html
+++ b/index.html
@@ -66,22 +66,12 @@
       <div class="col-md-4">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <!-- <h2 class="panel-title">News Feed</h2> -->
-            <div class="dropdown">
-              <button class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                Dropdown
-                <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-              </ul>
-            </div>
+            <h2 class="panel-title">News Feed</h2>
           </div>
           <div class="panel-body">
+            <select id="newsSelector" class="form-control">
+              <option>Cryptocurrency Headlines</option>
+            </select>
             <div id="newsfeed"></div>
           </div>
         </div>
