--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </div>
   </div>
 
-
+<div id="cryptomodal"></div>
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
 
