added div to place choices of coins for user

--- a/user-tabs.html
+++ b/user-tabs.html
@@ -50,9 +50,6 @@
                         <a href="#favorites" aria-controls="home" role="tab" data-toggle="tab">favorites</a>
                     </li>
                     <li role="presentation">
-                        <a href="#Historical-Data" aria-controls="profile" role="tab" data-toggle="tab">Historical Data</a>
-                    </li>
-                    <li role="presentation">
                         <a href="#News-Feed" aria-controls="messages" role="tab" data-toggle="tab">News feed</a>
                     </li>
 
@@ -60,26 +57,40 @@
                     <!-- Tab panes -->
                     <div class="tab-content">
                         <div role="tabpanel" class="tab-pane active" id="favorites"></div>
-                        <div role="tabpanel" class="tab-pane" id="Historical-Data"></div>
                         <div role="tabpanel" class="tab-pane" id="News-Feed"></div>
                     </div>
-
+            </div>
+            <br>
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h2 class="panel-title">CHOOSE FAVORITE CURRENCIES FROM BELOW:</h2>
+                        </div>
+                        <div class="panel-body">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis expedita obcaecati cum tenetur perspiciatis sit, voluptate,
+                            nemo optio ipsam dolorem veritatis ut? Esse vel ducimus molestias eum, unde illum iure?
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
 
         <!-- <div class="row">
-      <div class="col-md-4">
+        <div class="col-md-4">
         <div class="panel panel-default">
-          <div class="panel-heading">
-            <h2 class="panel-title">News Feed</h2>
-          </div>
-          <div class="panel-body">
-            <div id="newsfeed"></div>
-          </div>
+        <div class="panel-heading">
+        <h2 class="panel-title">News Feed</h2>
         </div>
-      </div>
-    </div> -->
+        <div class="panel-body">
+        <div id="newsfeed"></div>
+        </div>
+        </div>
+        </div>
+        </div> -->
 
         <!-- CLOSE CONTAINER -->
     </div>
