login and signup modals done

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               <input type="password" class="form-control" id="password2" placeholder="password">
             </div>
           
-            <button type="submit" class="btn btn-primary" id="signin">Submit</button>
+            <button type="submit" class="btn btn-primary" id="login">Submit</button>
           </form>
         </div>
         <div class="modal-footer">
@@ -150,6 +150,46 @@
       </div>
     </div>
   </div>
+
+   <!-- Modal for if user types incorrect password or username -->
+   <div class="modal fade" id="wrong" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title"></h4>
+        </div>
+        <div class="modal-body">
+          Incorrect Username or Password
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+     <!-- If username is already taken -->
+     <div class="modal fade" id="usertaken" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <h4 class="modal-title"></h4>
+          </div>
+          <div class="modal-body">
+            Username Already Taken
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
 <div id="cryptomodal"></div>
   <!-- jQuery -->
