--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
           <div class="panel-heading">
             <h2 class="panel-title">Crypto Rankings</h2>
           </div>
-          <div class="panel-body" id="top50">
-            
-          </div>
+          <div class="panel-body" id="top50"></div>
         </div>
       </div>
       <div class="col-md-4">
