--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -20,11 +20,11 @@
   <nav class="navbar navbar-inverse">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">User Dashboard</a>
+        <a class="navbar-brand" href="#" >User Dashboard</a>
       </div>
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a href="">
+          <a href="" id="userdash">
             <span class="glyphicon glyphicon-user"></span>
             User Name
           </a>
