updates to news api, feed layout, general ui enhancement

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div class="row">
       <div class="col-md-8">
-        <div class="panel panel-default" >
+        <div id="cryptorankings" class="panel panel-default" >
           <div class="panel-heading">
             <h2 class="panel-title">Crypto Rankings</h2>
           </div>
