deleted unecessary code

--- a/user-tabs.html
+++ b/user-tabs.html
@@ -35,7 +35,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     <a href="">
-                        <span class="glyphicon glyphicon-user"></span>
+                        <span class="glyphicon glyphicon-user" id="username"></span>
                         User Name
                     </a>
                 </li>
@@ -57,7 +57,7 @@
                 <!-- Nav tabs -->
                 <ul class="nav nav-tabs" role="tablist">
                     <li role="presentation" class="active">
-                        <a href="#favorites" aria-controls="home" role="tab" data-toggle="tab" id="favoritesTab">favorites</a>
+                        <a href="#favorites" aria-controls="home" role="tab" data-toggle="tab" id="favoritesTab">Favorites</a>
                     </li>
                     <li role="presentation">
                         <a href="#News-Feed" aria-controls="messages" role="tab" data-toggle="tab" id="newsTab">News feed</a>
