--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Public Dashbaord</a>
+        <a class="navbar-brand" href="#">Public Dashboard</a>
       </div>
       <ul class="nav navbar-nav navbar-right">
         <li>
