added footer, team page, basic info at top

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
   </nav>
 
   <div class="container">
+      <div class="row">
+          <div class="col-md-12">
+            <div class="jumbotron text-center" id="marketcapbox">
+            </div>
+          </div>
+        </div>
     <div class="row">
       <div class="col-md-12">
         <div class="jumbotron">
@@ -187,6 +193,11 @@
   </div>
 
   <div id="cryptomodal"></div>
+  <nav class="navbar navbar-default navbar-fixed-bottom" id="team">
+      <div class="container" >
+        <a href="team.html" style="display: inline-block; color: aquamarine"><li>Meet The Team</li></a>
+      </div>
+    </nav>
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
 
