--- a/user-tabs.html
+++ b/user-tabs.html
@@ -57,7 +57,7 @@
                 <!-- Nav tabs -->
                 <ul class="nav nav-tabs" role="tablist">
                     <li role="presentation" class="active">
-                        <a href="#favorites" aria-controls="home" role="tab" data-toggle="tab" id="favoritesTab">Favorites</a>
+                        <a href="#favorites" aria-controls="home" role="tab" data-toggle="tab" id="favoritesTab">Historical Data</a>
                     </li>
                     <li role="presentation">
                         <a href="#News-Feed" aria-controls="messages" role="tab" data-toggle="tab" id="newsTab">News feed</a>
@@ -90,7 +90,7 @@
                     <div class="col-md-12">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h2 class="panel-title">CHOOSE FAVORITE CURRENCIES FROM BELOW:</h2>
+                                <h2 class="panel-title">Choose Currencies From Below To Display Historical Data:</h2>
                             </div>
                             <div class="panel-body">
                                 <div id="icons">
@@ -137,18 +137,6 @@
         </div>
 
 
-        <!-- <div class="row">
-        <div class="col-md-4">
-        <div class="panel panel-default">
-        <div class="panel-heading">
-        <h2 class="panel-title">News Feed</h2>
-        </div>
-        <div class="panel-body">
-        <div id="newsfeed"></div>
-        </div>
-        </div>
-        </div>
-        </div> -->
 
         <!-- CLOSE CONTAINER -->
     </div>
