--- a/index.html
+++ b/index.html
@@ -193,6 +193,13 @@
     </div>
   </div>
 
+  <!-- footer with link to meet page -->
+  <nav class="navbar navbar-default navbar-fixed-bottom">
+    <div class="container">
+      <a href="team.html" style="color:aquamarine">Meet The Team</a>
+    </div>
+  </nav>
+
   <div id="cryptomodal"></div>
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
