--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
       </div>
     </div>
     <div class="row">
+      <div class="col-md-12" >
+          <div class="panel panel-default">
+              <div class="panel-body text-center" id="marketcapbox">
+                <!-- global data goes here -->
+              </div>
+            </div>
+        
+      </div>
+    </div>
+    <div class="row">
       <div class="col-md-8">
         <div id="cryptorankings" class="panel panel-default">
           <div class="panel-heading">
